# voxelshift

./: Cargo.toml
src/: app.rs  app_window.rs  colors.rs  gfx.rs  main.rs  program_builder.rs  proto_mesh.rs  scene.rs  vertex.rs
src/components/: mod.rs
src/components/common/: location.rs  mod.rs
src/components/rendering/: camera.rs  mesh_renderer.rs  mod.rs
src/components/rendering/classes/: mesh_object.rs  mod.rs
src/game/: chunk.rs  chunk_blueprint.rs  game_scene.rs  gen_schema.rs  mod.rs  player_code.rs  voxel.rs  world_generator.rs
src/game/game_classes/: player.rs  world.rs
src/game/game_components/: physics.rs
src/game/programs/: mod.rs  world_program.rs
