[package]
name = "voxelslide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.45.0"
gl = "0.14.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
multiverse-ecs = { path = "../multiverse-ecs" }
ggmath = { path = "../ggmath" }
ggutil = { path = "../ggutil" }
as-any = "0.3.0"
paste = "1.0.7"
lazy_static = "1.4.0"
bitflags = "1.3.2"